tests/cases/fail/string_slice_start_type.p4
def main() -> None:
    word = "compiler"
    print(word[True:3])
